# PayRosa

./: .gitignore  README.md  biome.json  drizzle.config.ts  next.config.ts  package.json  playwright.config.ts  playwright.freighter.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vercel.json  vitest.config.ts
app/: globals.css  layout.tsx  page.tsx
app/connect/: page.tsx
app/dashboard/: layout.tsx  page.tsx
app/lib/: stellar.ts  wallet.ts
app/stats/: page.tsx
contracts/: .gitignore  Cargo.toml  DEPLOYMENT.md  Makefile  rust-toolchain.toml
contracts/payrosa-escrow/: Cargo.toml
contracts/payrosa-escrow/src/: error.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/payrosa-escrow/test_snapshots/test/: test_client_can_release.1.json  test_deposit_locks_funds.1.json  test_deposit_zero_amount_fails.1.json  test_double_deposit_same_invoice_fails.1.json  test_initialize_sets_admin.1.json  test_paused_blocks_deposit.1.json  test_refund_returns_to_client.1.json  test_release_pays_freelancer.1.json  test_release_twice_fails.1.json  test_stranger_cannot_settle.1.json
contracts/scripts/: deploy.sh
contracts/ts-client/: payrosa-escrow-client.ts
docs/: ARCHITECTURE.md  SUBMISSION.txt  description.txt  design.txt  technical-flow.txt
drizzle/: 0000_spooky_jean_grey.sql
drizzle/meta/: 0000_snapshot.json  _journal.json
screen-shot/: result.json
tests/: setup.ts
tests/e2e/: demo-video-min.spec.ts  demo-video.spec.ts  prod-real.spec.ts
tests/unit/: auth.service.test.ts  invoice.service.test.ts  lib.test.ts  services.test.ts
(+42 files in other folders)
